# sheeprl

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  benchmark.py  hf.txt  main.py  mkdocs.yml  our.txt  pyproject.toml  ratio.py  script.py  setup.py  sheeprl_eval.py  sheeprl_model_manager.py  test.py
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: cpu-tests.yaml  sheepit.yaml  stale.yaml
benchmarks/: benchmark.py  benchmark_sb3.py
docs/: README.md  add_environment.md  api_docs.md  configs.md  eval_your_agent.md  learn_in_diambra.md  run_experiments.md  select_observations.md
examples/: architecture_template.py  model_manager.ipynb  observation_space.py  ratio.py  rlhf_demo_qa.py  rlhf_demo_summary.py  rlhf_evaluate_perplexity.py  rlhf_evaluate_rm.py  rlhf_evaluate_rouge.py
fabricrl/: __init__.py  cli.py
fabricrl/algos/: args.py
fabricrl/algos/droq/: agent.py  args.py  droq.py  loss.py  readme.md
fabricrl/algos/ppo/: __init__.py  actor.py  agent.py  args.py  loss.py  ppo.py  ppo_atari.py  ppo_decoupled.py  ppo_recurrent.py  readme.md  utils.py
fabricrl/algos/ppo_continuous/: __init__.py  agent.py  args.py  ppo_continuous.py  utils.py
fabricrl/algos/ppo_recurrent/: README.md  __init__.py  agent.py  args.py  ppo_recurrent.py  utils.py
fabricrl/algos/sac/: agent.py  args.py  loss.py  readme.md  sac.py  sac_decoupled.py  utils.py
fabricrl/data/: __init__.py  buffers.py  sampler.py
fabricrl/envs/: atari_wrappers.py  wrappers.py
fabricrl/how to/: learn_in_atari.md
fabricrl/losses/: ppo.py
fabricrl/models/: actor_critic.py  common.py  feature.py  models.py
fabricrl/policy/: policy.py
fabricrl/utils/: imports.py  metric.py  model.py  parser.py  register.py  registry.py  utils.py
howto/: actions_as_observation.md  add_environment.md  add_new_tasks.md  configs.md  eval_your_agent.md  learn_in_atari.md  learn_in_diambra.md  learn_in_dmc.md  learn_in_minedojo.md  learn_in_minerl.md  learn_in_supermario.md  logs_and_checkpoints.md  model_manager.md  register_external_algorithm.md  register_new_algorithm.md  rlhf.md  run_experiments.md  select_observations.md  work_with_multi-encoder_multi-decoder.md  work_with_steps.md
hydra_plugins/: sheeprl_search_path.py
notebooks/: dreamer_v3_imagination.ipynb  replay_buffer.ipynb
sheeprl/: __init__.py  __main__.py  available_agents.py  cli.py
sheeprl/algos/: __init__.py  args.py
sheeprl/algos/a2c/: README.md  a2c.py  agent.py  args.py  evaluate.py  loss.py  utils.py
sheeprl/algos/dreamer_v1/: README.md  agent.py  args.py  dreamer_v1.py  dreamer_v1_np.py  evaluate.py  loss.py  utils.py
sheeprl/algos/dreamer_v2/: README.md  agent.py  args.py  dreamer_v2.py  dreamer_v2_np.py  evaluate.py  loss.py  utils.py
sheeprl/algos/dreamer_v3/: README.md  agent.py  args.py  dreamer_v2.py  dreamer_v3.py  dreamer_v3_np.py  evaluate.py  loss.py  utils.py
sheeprl/algos/droq/: agent.py  args.py  droq.py  droq_np.py  evaluate.py  utils.py
sheeprl/algos/mopo/: agent.py  evaluate.py  loss.py  mopo.py  utils.py
sheeprl/algos/muzero/: agent.py  args.py  how_muzero_is_developed.md  how_muzero_works.md  loss.py  mcts_utils.py  muzero.py  muzero_atari.py  muzero_decoupled.py  utils.py
sheeprl/algos/p2e/: agent.py  args.py  loss.py  p2e.py  p2e_few_shot.py  p2e_one_shot.py  train.py  utils.py
sheeprl/algos/p2e_dv1/: README.md  agent.py  args.py  evaluate.py  p2e_dv1.py  p2e_dv1_exploration.py  p2e_dv1_exploration_np.py  p2e_dv1_finetuning.py  p2e_dv1_finetuning_np.py  utils.py
sheeprl/algos/p2e_dv2/: README.md  agent.py  args.py  evaluate.py  p2e_dv2.py  p2e_dv2_exploration.py  p2e_dv2_exploration_np.py  p2e_dv2_finetuning.py  p2e_dv2_finetuning_np.py  utils.py
sheeprl/algos/p2e_dv3/: README.md  agent.py  evaluate.py  p2e_dv3.py  p2e_dv3_exploration.py  p2e_dv3_exploration_np.py  p2e_dv3_finetuning.py  p2e_dv3_finetuning_np.py  utils.py
sheeprl/algos/ppo/: README.md  agent.py  args.py  evaluate.py  loss.py  ppo.py  ppo_atari.py  ppo_decoupled.py  ppo_decoupled_np.py  ppo_np.py  utils.py
sheeprl/algos/ppo_continuous/: agent.py  args.py  ppo_continuous.py  utils.py
sheeprl/algos/ppo_pixel/: agent.py  args.py  ppo_atari.py  ppo_pixel_continuous.py  utils.py
sheeprl/algos/ppo_recurrent/: README.md  agent.py  args.py  evaluate.py  ppo_recurrent.py  ppo_recurrent_np.py  utils.py
sheeprl/algos/ppo_tsp/: agent.py  evaluate.py  loss.py  ppo.py
sheeprl/algos/rlhf/: README.md  __init__.py  agent.py  args.py  collate.py  data.py  lora_utils.py  loss.py  metrics.py  models.py  ppo_utils.py  rlhf_dpo.py  rlhf_ppo.py  rlhf_rm.py  rlhf_sft.py  scheduler.py  utils.py
sheeprl/algos/sac/: args.py  (+8 more)
sheeprl/configs/: config.yaml  env_config.yaml  eval_config.yaml  model_manager_config.yaml  rlhf_eval_config.yaml
sheeprl/csrc/: bind.cpp
sheeprl/data/: __init__.py  buffers.py  buffers_np.py
sheeprl/envs/: __init__.py  crafter.py  d4rl.py  diambra.py  diambra_wrapper.py  dmc.py  dummy.py  minedojo.py  minerl.py  pokemon.py  super_mario_bros.py  tsp.py  wrappers.py
sheeprl/models/: models.py
sheeprl/optim/: rmsprop_tf.py  tf_rmsprop.py
sheeprl/utils/: callback.py  callback_np.py  d4rl.py  distribution.py  env.py  fabric.py  imports.py  logger.py  memmap.py  metric.py  mlflow.py  model.py  model_manager.py  parser.py  precision.py  registry.py  scaler.py  timer.py  utils.py
tests/: conftest.py  run_tests.py  run_tests_mlflow.py
tests/test_algos/: test_algos.py  test_cli.py
tests/test_data/: test_buffers.py  test_buffers_np.py  test_env_independent_rb.py  test_episode_buffer.py  test_episode_buffer_np.py  test_sequential_buffer.py  test_sequential_buffer_np.py  test_trajectory_buffer.py
tests/test_envs/: test_action_repeat.py  test_actions_as_observations.py  test_frame_stack.py  test_wrappers.py
tests/test_models/: test_cnn.py  test_mlp.py
tests/test_utils/: test_fabric.py  test_memmap.py  test_nstep_return.py  test_two_hot_decoder.py  test_two_hot_encoder.py
tests/test_wrappers/: test_wrappers.py
white_paper/: README.md  run.py  run_dreamer_dmc.py
(+239 files in other folders)
